# hcc

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  global_pch.hpp  xmake.lua
.cache/clangd/index/: ast.cc.205201653D4E2F64.idx  ast.hpp.A0174678DB692C89.idx  ast_addrof.cc.FB7B74FCD477D1FF.idx  ast_asm.cc.B161691C91EAE70A.idx  ast_binary_op.cc.6B890BCF96B096E8.idx  ast_func_call.cc.93986502116AB3A6.idx  ast_func_def.cc.DA10798AEF8971F2.idx  ast_number.cc.04BEB9FC591D4445.idx  ast_return.cc.85CC9BD988EEDD7A.idx  ast_root_node.cc.4EBC9CBE5BDD66EA.idx  ast_var_assign.cc.746EE12CF130E832.idx  ast_var_declare.cc.745CDE2E88214586.idx  ast_var_ref.cc.4822F9B7344389FD.idx  backend.cc.1A5871B1FC84C0D6.idx  backend.hpp.D03282D10B4554E6.idx  compile.cc.8BD0C0BE505B8C53.idx  compile.hpp.3697A608B3E73D74.idx  constant_propagation.cc.764D51ED55142DC2.idx  dce.cc.0038221B38DEDDAC.idx  errors.cc.DCF083BC9ABBC528.idx  eternal.hpp.4B704453AF897987.idx  flags.hpp.8B90A4FF8C98F8A0.idx  global_pch.hpp.E00A4D78E3B8B748.idx  gmock-actions.h.64B7A3DA376D0AA5.idx  gmock-all.cc.6E178F35AC6DB1A3.idx  gmock-cardinalities.cc.B04C19DF74517537.idx  gmock-cardinalities.h.09841342C0C3FE37.idx  gmock-function-mocker.h.ED56AD33A45930FD.idx  gmock-generated-actions.h.05A73A728E27508E.idx  gmock-internal-utils.cc.8E736591E5BD4986.idx  gmock-internal-utils.h.A4B860B072B1D834.idx  gmock-matchers.cc.E56377441D3508E2.idx  gmock-matchers.h.BEB28C48E489160D.idx  gmock-matchers.h.CAA889C2163CD6C4.idx  gmock-more-actions.h.B16A07DEB96D191A.idx  gmock-more-matchers.h.F0C9DE70D5FB392A.idx  gmock-nice-strict.h.9A706D1284DDEDFC.idx  gmock-port.h.2485D69971B12170.idx  gmock-port.h.482764F79F81CDAF.idx  gmock-pp.h.BC276716E3919306.idx  (+64 more)
.github/docker/clang/: Dockerfile-arch  Dockerfile-debian  Dockerfile-fedora  Dockerfile-ubuntu
.github/docker/gcc/: Dockerfile-arch  Dockerfile-debian  Dockerfile-fedora  Dockerfile-ubuntu
.github/workflows/: c-cpp.yml  mainline-compile.yml  mainline-format.yml  mainline-lint.yml  mainline-prepare.yml  mainline-test.yml  mainline.yml
cmake/: configuration.cmake
docs/: hypercpu_backend_abi.md  qproc_backend_abi.md
hccstd/: hccmain.hypercpu.c  hccmain.qproc.c
src/: CMakeLists.txt  abi_metadata.hpp  ast.cc  ast.hpp  cstd_pch.hpp  dep_pch.hpp  flags.hpp  function_metadata.hpp  hcc.cc  hcc.cpp  hcc.hpp  lexer.l  main.cc  metadata.hpp  ncc.cc  ncc.hpp  optimization.hpp  parser.hpp  parser.y  pch.hpp  result.hpp  type_metadata.hpp  util.cc  util.cpp  util.hpp  value.cc  value.hpp  version.hpp  yy.hpp
src/Common/: CMakeLists.txt  result.hpp
src/Core/: CMakeLists.txt  hcc.cc  hcc.hpp  metadata.cc
src/Core/ast/: ast.cc  ast.hpp  ast_addrof.cc  ast_asm.cc  ast_binary_op.cc  ast_func_call.cc  ast_func_def.cc  ast_number.cc  ast_return.cc  ast_root_node.cc  ast_var_assign.cc  ast_var_declare.cc  ast_var_ref.cc
src/Core/backend/: backend.cc  backend.hpp  optimization.cc
src/Core/backend/hypercpu/: hypercpu_backend.cc  hypercpu_backend.hpp  hypercpu_compile_calls.cc
src/Core/backend/qproc/: qproc_backend.cc  qproc_backend.hpp  qproc_compile_calls.cc
src/Core/ir/: ir.cc  ir.hpp
src/Core/ir/optimizations/: constant_propagation.cc  dce.cc
src/Main/: CMakeLists.txt  main.cc
src/ast/: ast.cc  ast.hpp  ast_addrof.cc  ast_asm.cc  ast_binary_op.cc  ast_binary_op.cpp  ast_func_call.cc  ast_func_def.cc  ast_func_def.cpp  ast_number.cc  ast_number.cpp  ast_return.cc  ast_root_node.cc  ast_root_node.cpp  ast_var_assign.cc  ast_var_declare.cc  ast_var_declare.cpp  ast_var_ref.cc  type.hpp
src/backend/: abi.h  backend.cc  backend.cpp  backend.hpp  optimization.cc
src/backend/hypercpu/: hypercpu_backend.cc  hypercpu_backend.cpp  hypercpu_backend.hpp
src/backend/qproc/: qproc_backend.cc  qproc_backend.cpp  qproc_backend.hpp  qproc_compile_calls.cc
src/bison/: lexer.l  lexer.ll  parser.y  parser.yy
src/compiler/: compiler.cc
src/driver/: driver.cc  driver.cpp  driver.hpp
src/ir/: ir.cc  ir.cpp  ir.hpp
src/ir/optimizations/: constant_propagation.cc  dce.cc  stack_reserve.cc  stack_reserve.cpp  stack_setup.cc  stack_setup.cpp
src/lexer/: lexer.cc  lexer.cpp  lexer.hpp  token.cc  token.cpp  token.hpp
src/main/: main.cc
src/parser/: ast.cc  ast.hpp  ast_assign_var_node.cc  ast_binary_op_node.cc  ast_declare_var_node.cc  ast_func_def.cc  ast_number_node.cc  ast_return_node.cc  parser.cc  parser.hpp  parser.yy
src/plugin/: hcc_main_plugin.cc  hcc_plugin.cc  hcc_plugin.hpp
src/regallocator/: register_allocator.cpp  register_allocator.hpp
src/value/: value.cc  value.cpp  value.hpp  value_stack_var.hpp  value_type.hpp
tests/: CMakeLists.txt  compile.cc  compile.hpp  cstd_pch.hpp  errors.cc  hcpu_codegen.cpp  lexer.cc  lexer.cpp  main.cc  parse_errors.cc  parse_errors.cpp  parser.cc  pch.hpp  qproc_codegen.cc  syntax_errors.cc  unknown_backend_errors.cpp
tests_old/: main.cc  main.hpp  unknown_backend_errors.cc
